# mobile-RIP-app

./: CMakeLists.txt  ColorProfile.cpp  ColorProfile.h  ImageEditor.cpp  ImageEditor.h  ImageEditorView.qml  ImageLoader.cpp  ImageLoader.h  ImpositionView.qml  JobDetailsView.qml  JobListView.qml  Main.qml  PrintJob.h  PrintJobModel.cpp  PrintJobModel.h  PrintJobNocai.cpp  PrintJobNocai.h  PrintJobNocaiOutput.cpp  PrintJobNocaiOutput.h  PrintJobOutput.cpp  PrintJobOutput.h  PrinterSetupView.qml  README.md  ToDoList  Toast.qml  buildApp.sh  main.cpp  rip-app.desktop  stb_image.h
AppDir/: AppRun  appRIPPrinterApp.desktop
assets/: RIP_App_Plain_Paper.icm
docs/: RIP-APP_Flowchart.drawio  RIP-App_Software_Design_Document.docx
qml/: DraggableItem.qml  JobDetailsView.qml  JobListView.qml  Main.qml  PrinterSetupView.qml
scripts/: buildApp.sh  cmyk_dither_mask.sh  generate_prn.py
